# KubeServe---PaaS

./: .env.example  .gitignore  ARCHITECTURE.md  INTEGRATION_TEST_GUIDE.md  QUICKSTART.md  README.md  ROADMAP.md  context.md  docker-compose.yml  locustfile.py  phase0-setup.md  phase3-deploy.md  phase4-ingress.md  phase5-observability.md  phase6-testing.md  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 001_create_users_table.py  002_create_model_registry_tables.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py
app/core/: __init__.py  dependencies.py  kubernetes_client.py  security.py  storage.py
app/models/: __init__.py  model.py  user.py
app/repositories/: __init__.py  model_repository.py  user_repository.py
app/schemas/: __init__.py  model.py  user.py
frontend/: README.md  next.config.js  package-lock.json  package.json  phase7-frontend.md
grafana/: README.md
inference-server/: .dockerignore  Dockerfile  README.md  build.sh  main.py  requirements-base.txt  start.sh
scripts/: README.md  fix-permissions.sh  import-grafana-dashboards.sh  install-ingress-controller.sh  install-prometheus.sh  integration_test.sh  run-load-test.sh  setup-kind-cluster.sh  start-backend.sh  stop-backend.sh  teardown-phase0.sh  verify-phase0.sh  verify-phase1-setup.sh
tests/: README.md  __init__.py  conftest.py  conftest_helm.py  test_auth.py  test_dashboards.py  test_deployment_service.py  test_helm_chart.py  test_ingress.py  test_kubernetes.py  test_metrics.py  test_models.py  test_storage.py
(+33 files in other folders)
